# turnBasedRPG

./: CMakeLists.txt  README.md
src/: moves.hpp  pkmn.hpp  profiling.hpp
src/core/: Move.hpp  MoveCategory.hpp  MoveContest.hpp  MoveTypes.hpp  Moves.hpp  Pokemon.hpp  Stats.hpp
src/lib/: BaseType.hpp  MathUtilities.hpp
src/tests/: MathUtilities.cpp  Stats.cpp  sizeTest.cpp  twoPokemonTest.cpp
